--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
     <script type="text/javascript" src="libs\jquery-3.4.1.min.js"></script>
     <script src="js/main-es6.js"></script>
-    <script src="js/jQuery-main.js"></script>
+    <script src="js/main-jQuery.js"></script>
 </body>
 
 </html>
